syntax = "proto3";
option java_multiple_files = true;
option java_outer_classname = "ServiceProto";

package com.rsocket.rpc;

import "google/protobuf/empty.proto";


message Request {
    string message = 1;
}

message Response {
    string message = 1;
}

service Service {
    rpc fireAndForget(Request) returns (google.protobuf.Empty) {}
    rpc requestResponse(Request) returns (Response) {}
    rpc requestStream(Request) returns (stream Response) {}
}